main.css
table {
    white-space: inherit;
    line-height: inherit;
    font-weight: inherit;
    font-size: inherit;
    font-variant: inherit;
    font-style: inherit;
}

#editPlacemark .icons .icon {
    height: 32px;
    margin: 5px;
    vertical-align: middle;
    width: 150px;
    padding-left:40px;
    background-repeat: no-repeat;
    background-position: left center;
    float:left;
}
#editPlacemark .scroll {
    height:15em;
}
#editPlacemark .icons {
    height: auto;
}

#editPlacemark .icons .icon.active {
    background-color:#d5d3c1;
}

/* miniColors color picker */

.miniColors-trigger {
    height: 22px;
    width: 22px;
    background: url(http://labs.abeautifulsite.net/jquery-miniColors/images/trigger.png) center no-repeat;
    vertical-align: middle;
    margin: 0 .25em;
    display: inline-block;
    outline: none;
}

.miniColors-selector {
    position: absolute;
    width: 175px;
    height: 150px;
    background: #FFF;
    border: solid 1px #BBB;
    -moz-box-shadow: 0 0 6px rgba(0, 0, 0, .25);
    -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, .25);
    box-shadow: 0 0 6px rgba(0, 0, 0, .25);
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    padding: 5px;
    z-index: 999999;
}

.miniColors-selector.black {
    background: #000;
    border-color: #000;
}

.miniColors-colors {
    position: absolute;
    top: 5px;
    left: 5px;
    width: 150px;
    height: 150px;
    background: url(http://labs.abeautifulsite.net/jquery-miniColors/images/colors.png) right no-repeat;
    cursor: crosshair;
}

.miniColors-hues {
    position: absolute;
    top: 5px;
    left: 160px;
    width: 20px;
    height: 150px;
    background: url(http://labs.abeautifulsite.net/jquery-miniColors/images/colors.png) left no-repeat;
    cursor: crosshair;
}

.miniColors-colorPicker {
    position: absolute;
    width: 9px;
    height: 9px;
    border: 1px solid #fff;
    -moz-border-radius: 11px;
    -webkit-border-radius: 11px;
    border-radius: 11px;
}
.miniColors-colorPicker-inner {
    position: absolute;
    top: 0;
    left: 0; 
    width: 7px;
    height: 7px;
    border: 1px solid #000;
    -moz-border-radius: 9px;
    -webkit-border-radius: 9px;
    border-radius: 9px;
}

.miniColors-huePicker {
    position: absolute;
    left: -3px;
    width: 24px;
    height: 1px;
    border: 1px solid #fff;
    border-radius: 2px;
    background: #000;
}


#editPoly a.miniColors-trigger {
    width:1.2em;
    height:1.2em;
    margin-left:0.2em;
    display:inline-block;
    border:solid 0.2em #aaa;
}
#editPoly span.fixedWidth {
    width: 8em;
    display: inline-block;
}


div.leaflet-marker-pane > img.leaflet-marker-icon {
    margin-top: -37px;
    margin-left: -16px;
}
div.leaflet-marker-pane > img[src="polymarker.png"].leaflet-marker-icon {
    margin-top:-8px;
    margin-left:-8px;
}
.leaflet-marker-icon {
    -moz-user-drag: none; 
    -webkit-user-drag: none; 
    user-drag: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
}

.menu-closer {
    position:absolute;
    top:0; left:0;
    padding:0;
    margin:0;
}

.menu {
    position:absolute;
    /*background-color:#f1f1f1;*/
    box-shadow: 3px 3px 6px #bba;
}
.menu .item {
    padding:0.5em 1.5em;
    border-bottom: solid 1px #ddc;
    cursor:pointer;
}
.menu .item:hover {
    background: #459E00 url(http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/south-street/images/ui-bg_highlight-hard_15_459e00_1x100.png) 50% 50% repeat-x;
    color: white;
}

body {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
}

.ui-button.ui-combo  {
    padding:0.4em 1em;
    color:ButtonText;
}

div.tooltip {
    position: absolute;
    bottom:0.1em;
    font-size:1.1em;
    padding:0.3em 0.5em;
}

@media all and (max-width : 600px) {
    body {
        font-size: 0.92em;
    }
}

@media all and (min-width : 601px) {
    .mobileOnly {
        display:none !important;
    }
    /*body {*/
        /*font-size: 16px;*/
    /*}*/
}

#toolbar {
    position: absolute;
    top: 0em;
    right: 0;
    padding:0.3em;
    width: 85%;
    text-align: right;
}


#introScreen a.button {
    display: block;
    width: 43%;
    float: left;
    margin: auto;
}

#introScreen div.explanation {
    display: block;
    width: 53%;
    float: right;
}

#introScreen div.block {
    margin-top: 20px;
    margin-bottom: 10px;
    float: left;
    clear: both;
}

#directionsCompact {
    display: none;
    position:absolute;
    bottom:0;
    left:0;
    border-radius: 1em;
    padding:0em;
    overflow:auto;
}
#directionsCompact > div {
    padding:0.5em;
}


#directionsPanel {
    display: none;
    position:absolute;
    bottom:0;
    left:0;
    max-width: 70%;
    max-height: 80%;
    border-radius: 1em;
    padding:1em;
    overflow:auto;
}

#directionsPanel .point img {
    margin-right:1em;
    vertical-align: middle;
}

#directionsPanel .point td {
    padding:0.25em 0.5em;
}

#directionsPanel .point td.distance {
    width:4.5em;
}

#directionsPanel .point  {
    clear:both;
}

input.iframe-dimensions {
    width: 4em;
}

